{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 182,
  "lineage": "5aa41147-c5b6-e587-139f-cb062229448c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "first",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkInterfaces/host-nic",
            "ip_configuration": [
              {
                "name": "host-IP-Config",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/publicIPAddresses/host-IP",
                "subnet_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/virtualNetworks/TripleSSH-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "host-nic",
            "network_security_group_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkSecurityGroups/host-NSG",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "TripleSSH-Group"
          },
          "depends_on": [
            "azurerm_network_security_group.first",
            "azurerm_public_ip.first",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "second",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkInterfaces/slave-nic",
            "ip_configuration": [
              {
                "name": "slave-IP-Config",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/publicIPAddresses/slave-IP",
                "subnet_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/virtualNetworks/TripleSSH-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "slave-nic",
            "network_security_group_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkSecurityGroups/slave-NSG",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "TripleSSH-Group"
          },
          "depends_on": [
            "azurerm_network_security_group.second",
            "azurerm_public_ip.second",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "third",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkInterfaces/server-nic",
            "ip_configuration": [
              {
                "name": "server-IP-Config",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/publicIPAddresses/server-IP",
                "subnet_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/virtualNetworks/TripleSSH-network/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "server-nic",
            "network_security_group_id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkSecurityGroups/server-NSG",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "TripleSSH-Group"
          },
          "depends_on": [
            "azurerm_network_security_group.third",
            "azurerm_public_ip.third",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "first",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkSecurityGroups/host-NSG",
            "location": "uksouth",
            "name": "host-NSG",
            "resource_group_name": "TripleSSH-Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "HTTPS",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8088",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Python",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "second",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkSecurityGroups/slave-NSG",
            "location": "uksouth",
            "name": "slave-NSG",
            "resource_group_name": "TripleSSH-Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "HTTPS",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8088",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Python",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "third",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/networkSecurityGroups/server-NSG",
            "location": "uksouth",
            "name": "server-NSG",
            "resource_group_name": "TripleSSH-Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "HTTPS",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8088",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Server",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "first",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "hmshost-280619110502",
            "fqdn": "hmshost-280619110502.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/publicIPAddresses/host-IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.145.7.219",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "host-IP",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "TripleSSH-Group",
            "sku": "Basic",
            "tags": {
              "environment": "Production"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "second",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "hmsslave-280619110502",
            "fqdn": "hmsslave-280619110502.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/publicIPAddresses/slave-IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.145.1.20",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "slave-IP",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "TripleSSH-Group",
            "sku": "Basic",
            "tags": {
              "environment": "Production"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "third",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "hmsserver-280619110502",
            "fqdn": "hmsserver-280619110502.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/publicIPAddresses/server-IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.145.1.84",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "server-IP",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "TripleSSH-Group",
            "sku": "Basic",
            "tags": {
              "environment": "Production"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/virtualNetworks/TripleSSH-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "TripleSSH-Group",
            "virtual_network_name": "TripleSSH-network"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/051f07ef-f597-4f62-80e5-f3515f5e0aa3/resourceGroups/TripleSSH-Group/providers/Microsoft.Network/virtualNetworks/TripleSSH-network",
            "location": "uksouth",
            "name": "TripleSSH-network",
            "resource_group_name": "TripleSSH-Group"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}